# rehype-tree-sitter-highlight

./: .gitignore  Cargo.toml  Justfile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yaml
crates/highlight/: Cargo.toml
crates/highlight/src/: grammar.rs  highlights.rs  injections.rs  lib.rs  queries.rs  ranges.rs
crates/highlight/tests/: newline_dependent_grammars_test.rs  ordering_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: grammar.rs  lib.rs
fixtures/queries/clojure/: injections.scm
